Fix RES tooltips being hidden by header
Dang z-indices are difficult

--- a/source/_base.scss
+++ b/source/_base.scss
@@ -736,7 +736,7 @@ a.choice[href$=controversial]:after {
 
 #header,
 body .modal {
-    z-index: 10000000
+    z-index: 2;
 }
 
 #sr-header-area {
