--- a/source/_link_bar.scss
+++ b/source/_link_bar.scss
@@ -1,6 +1,6 @@
 .side .md>ul:nth-of-type(3) {
     position: fixed;
-    z-index: 100000;
+    z-index: 1;
     top: 0;
     right: 0;
     margin: 0;
